// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input render snapshot 1`] = `
<div
  className="space-y-2"
>
  <label
    className="space-y-2"
  >
    <span
      className="input-label"
    >
      Email
    </span>
    <input
      className="py-2 px-4 rounded-md shadow focus:outline-none focus:ring focus:border-indigo-400 bg-white dark:bg-gray-900 dark:text-gray-100"
      type="text"
    />
  </label>
</div>
`;

exports[`Input render snapshot with error message 1`] = `
<div
  className="space-y-2"
>
  <label
    className="space-y-2"
  >
    <span
      className="input-label"
    >
      Email
    </span>
    <input
      className="py-2 px-4 rounded-md shadow focus:outline-none focus:ring focus:border-indigo-400 bg-white dark:bg-gray-900 dark:text-gray-100"
      type="text"
    />
  </label>
  <div
    className="text-red-700 dark:text-red-600 text-sm"
  >
    Invalid email address
  </div>
</div>
`;
